# School-Tool-Management

./: migration.sql
backend/: .env  CMakeLists.txt  schema.sql
backend/.cache/clangd/index/: attendance_controller.cpp.34F9703F41F2C519.idx  attendance_controller.h.3F938FF8726AF848.idx  auth_controller.cpp.5B2B4DED13DFA6E3.idx  auth_controller.h.7CDCF87290E01DFC.idx  auth_middleware.h.DE1C6615A2CC2C45.idx  base.h.1062F2BDB0837099.idx  cors.h.5949DC2A3E7AC0E4.idx  course_controller.cpp.B7B1407AC0B2E2CE.idx  course_controller.h.437272043657E0C8.idx  crow.h.0E030C75BDCA5975.idx  database.cpp.D52EAAE78BC61065.idx  database.h.A6AC05FC228629E5.idx  db.cpp.2C7D69C627202D36.idx  db.h.35561F9CBC0373B1.idx  defaults.h.6A17A2EA7DE83712.idx  grade_controller.cpp.F082226ADDB6F4DB.idx  grade_controller.h.63BE51E274D67567.idx  jwt.h.F09CAB8BBC4B0B48.idx  logger.h.4CC49F307AA208BC.idx  (+14 more)
backend/include/config/: database.h  db.h
backend/include/controllers/: attendance_controller.h  auth_controller.h  course_controller.h  grade_controller.h  section_controller.h  student_controller.h  task_controller.h
backend/include/middleware/: auth_middleware.h
backend/include/routes/: routes.h
backend/include/utils/: cors.h  logger.h  response_utils.h  security.h
backend/src/: main.cpp
backend/src/config/: database.cpp  db.cpp
backend/src/controllers/: attendance_controller.cpp  auth_controller.cpp  course_controller.cpp  grade_controller.cpp  section_controller.cpp  student_controller.cpp  task_controller.cpp
backend/src/routes/: routes.cpp
backend/src/utils/: security.cpp
(+128 files in other folders)
